@@ -1,3 +1,5 @@
+- Client.initialize takes two arguments: url and options
+
 * Tue Oct 18 2016 - version 0.6.0
 - No changes
 
